Changes: May 4th

--- a/sections/feature.liquid
+++ b/sections/feature.liquid
@@ -65,7 +65,9 @@
 {% javascript %}
     $(document).ready(() => {
         $(".owl-carousel").owlCarousel({
-            items: 1
+            items: 1,
+            loop: true,
+            nav: true
         })
     })
 {% endjavascript %}
