--- a/sections/projects.liquid
+++ b/sections/projects.liquid
@@ -43,7 +43,7 @@
             project_span: section.settings.projects-per-row
         %}
         {% render 'card.project'
-            project_title: "Grant Cottage"
+            project_title: "Georgian Bay Cottage"
             project_image: "https://cdn.shopify.com/s/files/1/0513/8081/3974/files/grant-cottage_2_480x.jpg?v=1617945620"
             project_url: "grant-cottage"
             project_span: section.settings.projects-per-row
