--- a/sections/about.liquid
+++ b/sections/about.liquid
@@ -1,23 +1,23 @@
 <div class="row my-5">
-    <div class="col-12 col-md-9 text-right">
+    <div class="col-12 col-sm-6 order-sm-2">
+        {% if section.settings.about-image %}
+            <img src="{{ section.settings.about-image | img_url : '1440x' }}" class="w-100" />
+        {% endif %}
+    </div>
+    <div class="col-12 col-sm-6 text-left d-flex flex-column justify-content-center px-5">
+        <h2 class="h2">About</h2>
         {{ section.settings.about-description }}
     </div>
-    <div class="col-12 col-md-3 text-right">
-        <h3>About</h3>
-    </div>
 </div>
 
-<div class="col-12 about-image" style="background-image: url({{ section.settings.about-image | img_url : '1440x' }})" >
-</div>
-
-<div class="row">
+{% comment %} <div class="row">
     <div class="col-12 col-md-3 text-left">
         <h3>Services</h3>
     </div>
     <div class="col-12 col-md-9 text-left">
         {{ section.settings.about-services }}
     </div>
-</div>
+</div> {% endcomment %}
 
 {% comment %} <div class="row mt-5">
     <div class="col-12 col-md-9 text-right">
