--- a/sections/feature.liquid
+++ b/sections/feature.liquid
@@ -67,7 +67,7 @@
         $(".owl-carousel").owlCarousel({
             items: 1,
             loop: true,
-            nav: true
+            nav: false
         })
     })
 {% endjavascript %}
