--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -14,14 +14,14 @@
 
             <div class="row">
                 <div class="col-sm-4">
-                    <p class="font-accent text-uppercase">&copy;2020 Montana Burnett Design</p>
+                    <p class="font-accent text-uppercase">&copy;2021 Montana Burnett Design</p>
                 </div>
-                <div class="d-flex flex-row justify-content-end col-sm-8">
+                {% comment %} <div class="d-flex flex-row justify-content-end col-sm-8">
                     <a href="#" class="font-accent text-uppercase ml-3">Contact</a>
                     <a href="#" class="font-accent text-uppercase ml-3">About</a>
                     <a href="#" class="font-accent text-uppercase ml-3">Terms</a>
                     <a href="#" class="font-accent text-uppercase ml-3">Shipping</a>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
