--- a/styles/_project.scss
+++ b/styles/_project.scss
@@ -52,11 +52,19 @@
         justify-content: center;
         align-items: center;
         background-color: transparentize($color: $backgroundAccent, $amount: 0.05);
+        transition: linear 150ms;
 
         .project-title {
             font-size: x-large;
             opacity: 1;
             text-decoration: none;
+        }
+    }
+
+    &:hover {
+
+        .project-info {
+            background-color: transparentize($color: $backgroundAccent, $amount: 0.5);
         }
     }
 }
