--- a/sections/about.liquid
+++ b/sections/about.liquid
@@ -1,10 +1,10 @@
 <div class="row my-5">
-    <div class="col-12 col-sm-6 order-sm-2">
+    <div class="col-12 col-sm-6 order-sm-2 mb-lg-0 mb-3">
         {% if section.settings.about-image %}
             <img src="{{ section.settings.about-image | img_url : '1440x' }}" class="w-100" />
         {% endif %}
     </div>
-    <div class="col-12 col-sm-6 text-left d-flex flex-column justify-content-center px-5">
+    <div class="col-12 col-sm-6 text-center text-lg-left d-flex flex-column justify-content-center px-3 px-lg-5">
         <h2 class="h2">About</h2>
         {{ section.settings.about-description }}
     </div>
