--- a/styles/theme.css
+++ b/styles/theme.css
@@ -334,7 +334,7 @@ body {
 
 @media only screen and (max-width: 1026px) {
   .header {
-    padding: 1rem;
+    padding: 2.5rem 1rem;
   }
   .header.header-center {
         grid-template-areas: "brand brand nav";
@@ -345,6 +345,10 @@ body {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
+  }
+  .header.header-center .nav label {
+    margin-bottom: 0;
+    line-height: 1;
   }
 }
 
