Swiper Installed on Landing Page

--- a/sections/admiral.liquid
+++ b/sections/admiral.liquid
@@ -3,7 +3,7 @@
 
 <!-- Slider main container -->
 <input type="checkbox" hidden class="d-none swipper-toggle" id="swipper-toggle" />
-<div class="swiper-container">
+<div class="swiper-container overlay">
     <!-- Additional required wrapper -->
     <label class="swipper-close" for="swipper-toggle">&Cross;</label>
     <div class="swiper-wrapper">
