--- a/styles/_feature-slider.scss
+++ b/styles/_feature-slider.scss
@@ -12,6 +12,12 @@
             height: 80vh;
         }
 
+        .swiper-slide {
+            background-size: cover;
+            background-position: center center;
+            background-repeat: no-repeat;
+        }
+
         .feature-card {
             background: transparent;
             padding: 1rem;
