--- a/styles/_section.scss
+++ b/styles/_section.scss
@@ -11,19 +11,17 @@ section.coming-soon {
     background-size: cover;
     background-position: center;
     position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
 
     h2 {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
         color: black;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-start;
-        padding: 1em;
+        margin: 1em;
         text-transform: uppercase;
-        margin-top: 3rem;
+        background-color: $backgroundAccent;
+        line-height: 1;
+        padding: 1rem;
+        padding-top: 1.25rem;
     }
 }
