--- a/styles/_swiper.scss
+++ b/styles/_swiper.scss
@@ -13,3 +13,52 @@
         background-color: white;
     }
 }
+
+
+.swipper-toggle:checked + .swiper-container {
+    visibility: visible;
+    transform: scale(1);
+}
+
+.swiper-container.overlay {
+    position: fixed !important;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000b;
+    z-index: 1000;
+    padding: 2rem 0 !important;
+    visibility: hidden;
+    transform: scale(0.75);
+    transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 150ms;
+
+    .swiper-slide {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        padding: 1rem;
+
+        img {
+            max-height: 100%;
+            max-width: 100%;
+            margin: auto;
+        }
+    }
+
+    .swipper-close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 0.5rem 1rem;
+        font-size: 3em;
+        color: #ddd;
+        z-index: 1000;
+        cursor: pointer;
+        transition: 150ms linear;
+
+        &:hover {
+            color: white;
+        }
+    }
+}
