--- a/styles/theme.css
+++ b/styles/theme.css
@@ -189,11 +189,12 @@ body {
 }
 
 .header {
-  display: -ms-grid;
-  display: grid;
-      grid-template-areas: "brand nav nav nav cart";
-  -ms-grid-columns: (1fr)[5];
-      grid-template-columns: repeat(5, 1fr);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -271,6 +272,11 @@ body {
   color: #C9C2B5;
 }
 
+.header .nav label {
+  margin-bottom: 0;
+  line-height: 1;
+}
+
 .header .nav-mobile {
   grid-area: nav-mobile;
 }
@@ -309,8 +315,6 @@ body {
 }
 
 .header .cart {
-  -ms-grid-row: 1;
-  -ms-grid-column: 5;
   grid-area: cart;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -332,23 +336,12 @@ body {
   color: #C9C2B5;
 }
 
-@media only screen and (max-width: 1026px) {
+@media only screen and (max-width: 480px) {
   .header {
-    padding: 2.5rem 1rem;
+    padding: 2rem 1rem;
   }
-  .header.header-center {
-        grid-template-areas: "brand brand nav";
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-  .header.header-center .nav {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .header.header-center .nav label {
-    margin-bottom: 0;
-    line-height: 1;
+  .header .brand img {
+    max-width: 280px;
   }
 }
 
@@ -385,6 +378,12 @@ body {
 
 .feature-slider .feature.feature-fullscreen {
   height: 80vh;
+}
+
+.feature-slider .feature .swiper-slide {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .feature-slider .feature .feature-card {
@@ -457,15 +456,6 @@ section.coming-soon {
   background-size: cover;
   background-position: center;
   position: relative;
-}
-
-section.coming-soon h2 {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -475,9 +465,16 @@ section.coming-soon h2 {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 1em;
+}
+
+section.coming-soon h2 {
+  color: black;
+  margin: 1em;
   text-transform: uppercase;
-  margin-top: 3rem;
+  background-color: #F3F1F0;
+  line-height: 1;
+  padding: 1rem;
+  padding-top: 1.25rem;
 }
 
 .mega-menu-toggle:checked ~ .mega-menu-container {
@@ -848,63 +845,6 @@ input[type="checkbox"].nav-mobile-toggle:checked ~ .nav-mobile {
   background-color: rgba(243, 241, 240, 0.5);
 }
 
-.swipper-toggle:checked + .swiper-container {
-  visibility: visible;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-}
-
-.swiper-container {
-  position: fixed !important;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #000b;
-  z-index: 1000;
-  padding: 2rem 0 !important;
-  visibility: hidden;
-  -webkit-transform: scale(0.75);
-          transform: scale(0.75);
-  -webkit-transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 150ms;
-  transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 150ms;
-}
-
-.swiper-container .swiper-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  padding: 1rem;
-}
-
-.swiper-container .swiper-slide img {
-  max-height: 100%;
-  max-width: 100%;
-  margin: auto;
-}
-
-.swiper-container .swipper-close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 0.5rem 1rem;
-  font-size: 3em;
-  color: #ddd;
-  z-index: 1000;
-  cursor: pointer;
-  -webkit-transition: 150ms linear;
-  transition: 150ms linear;
-}
-
-.swiper-container .swipper-close:hover {
-  color: white;
-}
-
 section.about .about-image {
   min-height: 30vh;
   background-size: cover;
@@ -977,5 +917,62 @@ input[type="submit"]:hover, input[type="submit"]:focus, input[type="submit"]:act
 
 .swiper-container .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: white;
+}
+
+.swipper-toggle:checked + .swiper-container {
+  visibility: visible;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.swiper-container.overlay {
+  position: fixed !important;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000b;
+  z-index: 1000;
+  padding: 2rem 0 !important;
+  visibility: hidden;
+  -webkit-transform: scale(0.75);
+          transform: scale(0.75);
+  -webkit-transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 150ms;
+  transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 150ms;
+}
+
+.swiper-container.overlay .swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 1rem;
+}
+
+.swiper-container.overlay .swiper-slide img {
+  max-height: 100%;
+  max-width: 100%;
+  margin: auto;
+}
+
+.swiper-container.overlay .swipper-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0.5rem 1rem;
+  font-size: 3em;
+  color: #ddd;
+  z-index: 1000;
+  cursor: pointer;
+  -webkit-transition: 150ms linear;
+  transition: 150ms linear;
+}
+
+.swiper-container.overlay .swipper-close:hover {
+  color: white;
 }
 /*# sourceMappingURL=theme.css.map */
