--- a/styles/theme.css
+++ b/styles/theme.css
@@ -452,7 +452,7 @@ section .section-heading {
 
 section.coming-soon {
   background-image: url("https://cdn.shopify.com/s/files/1/0513/8081/3974/files/shop.jpg?v=1620156359");
-  min-height: 70vh;
+  min-height: 768px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -471,10 +471,49 @@ section.coming-soon h2 {
   color: black;
   margin: 1em;
   text-transform: uppercase;
-  background-color: #F3F1F0;
   line-height: 1;
   padding: 1rem;
   padding-top: 1.25rem;
+}
+
+@media screen and (min-width: 320px) {
+  section.coming-soon h2 {
+    padding: 0.5rem;
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  section.coming-soon h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    margin-right: 8rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  section.coming-soon h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    margin-right: 15rem;
+  }
+}
+
+@media screen and (min-width: 1180px) {
+  section.coming-soon h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    margin-right: 17.5rem;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  section.coming-soon h2 {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+    margin-top: 2rem;
+  }
 }
 
 .mega-menu-toggle:checked ~ .mega-menu-container {
